...

      <Tabs.Screen
        name="profile"
        options={{
          title: 'Profile',
          tabBarIcon: ({ color, size }) => <Ionicons name="person" color={color} size={size} />,
          tabBarAccessibilityLabel: 'Profile tab'
        }}
      />
    </Tabs>
  );
}

